--- a/Tic-Tac-Toe/styles.css
+++ b/Tic-Tac-Toe/styles.css
@@ -1,5 +1,17 @@
 body {
-  background-color: white;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: wheat;
 }
 
 table {
@@ -14,5 +26,11 @@ td {
 }
 
 button {
+  outline: none;
   margin: 10px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  background: none;
+  transition: all 0.2s ease-in-out;
 }
